// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writes entry points to disk: assets/import-3b031dc7.css 1`] = `
"h1 {
  color: green;
}
"
`;

exports[`writes entry points to disk: assets/index.esm-wrapper-72fbbdd0.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"content2/index.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`writes entry points to disk: assets/index.esm-wrapper-600ffb76.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"content1/index.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`writes entry points to disk: assets/index-5dfee6cc.css 1`] = `
"body {
  color: blue;
}
"
`;

exports[`writes entry points to disk: assets/index-5f7d7b6f.css 1`] = `
"body {
  color: red;
}
"
`;

exports[`writes entry points to disk: content2/index.js 1`] = `
"import \\"../modules/import-8167e8d6.js\\";
var styles = \\"\\";
console.log(\\"content1\\");
"
`;

exports[`writes entry points to disk: content2/index.js 2`] = `
"import \\"../modules/import-8167e8d6.js\\";
var styles = \\"\\";
console.log(\\"content2\\");
"
`;

exports[`writes entry points to disk: manifest.json 1`] = `
Object {
  "background": Object {
    "service_worker": "crx-hmr-service-worker.js",
    "type": "module",
  },
  "content_scripts": Array [
    Object {
      "css": Array [
        "assets/index-5f7d7b6f.css",
        "assets/import-3b031dc7.css",
      ],
      "js": Array [
        "runtime-reloader--content-script.js",
        "assets/index.esm-wrapper-600ffb76.js",
      ],
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
    },
    Object {
      "css": Array [
        "assets/index-5dfee6cc.css",
        "assets/import-3b031dc7.css",
      ],
      "js": Array [
        "runtime-reloader--content-script.js",
        "assets/index.esm-wrapper-72fbbdd0.js",
      ],
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
    },
  ],
  "description": "DEVELOPMENT build with simple auto-reloader
[6:00:00 PM] Waiting for changes...",
  "manifest_version": 3,
  "name": "Test",
  "permissions": Array [],
  "version": "1.0.0",
  "version_name": "2021-12-07T00:00:00.000Z",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
      "resources": Array [
        "modules/import-8167e8d6.js",
        "content1/index.js",
        "content2/index.js",
      ],
    },
  ],
}
`;
